app/assets/stylesheets/frontend/views/_specialist_guides.scss
.specialist-guides-index {
  margin-bottom: 120px;

  .page-header {
    padding: 20px 0;
    margin: 0;
  }
  
  .filter-block {
    .multi-row-select {
      @media (min-width: 768px) {
        height: 130px;
      }
    }
    .button {
      @include button($light-blue);
      @include core-19;
      padding-bottom: 7px;
      padding-bottom: 0.7rem;
    }
  }
}

.specialist-guides-show {
  @include media(desktop) {
    .block-2 {
      width: 25%;
    }
    .block-3 {
      width: 70%;
    }
    .block-4 {
      width: 100%;
    }
  }

  .page-header {
    color: $light-blue;
    border: 4px solid;
    padding: $gutter-half $gutter-half $gutter-one-third;
    margin-bottom: $gutter;
    overflow: hidden;

    .organisations-icon-list {
      overflow: hidden;
      width: 100%;
      padding-bottom: $gutter-one-third;
      @include media (640px) {
        padding-bottom: $gutter-half;
      }

      li {
        margin-bottom: 0;
        list-style: none;
        color: $body-text;
        margin-bottom: $gutter-one-sixth;
        @include media (640px) {
          margin-bottom: $gutter-one-third;
        }
        a:after {
          content: "";
          margin: 0;
        }
      }
      .show-other-content {
        float: left;
        padding-left: $gutter-one-third;
        padding-right: $gutter-one-third;
        @include core-14;
      }
    }

    .label {
      @include core-14;
      margin-bottom: 0;
      max-width: 33em;
      a {
        white-space: nowrap;
      }
    }
    .page_title {
      margin: 0 0 $gutter;
      padding-top: 0;
    }
    .page-meta {
      @include core-19;
      max-width: 33em;
      p {
        display: inline;
      }
      .inapplicable-nations a {
        text-decoration: underline;
      }
    }
    .more-like-this {
      margin-top: $gutter-one-third;
      padding-top: $gutter-one-sixth;
      border-top: 1px solid $light-blue;
      a {
        color: $light-blue;
        text-decoration: none;
      }
    }
  }

  .meta {
    @include core-14;
    @include media(desktop) {
      float: right;
    }
  }

  .contextual-info {
    padding-top: $gutter-one-sixth;
    ol {
      margin-left: 1.1em;
      li {
        padding-bottom: 3px;
      }
    }
  }
  .js-paginate-document {
    .contextual-info {
      ol {
        margin-left: 0;
      }
      ol li ol li {
        list-style-type: decimal;
        list-style-position: inside;
        color: $white;
        a {
          margin-left: $gutter-one-third;
        }
      }
      nav {
        li {
          padding-bottom: 0;
          list-style: none;
          a {
            padding: $gutter-one-third $gutter-one-third $gutter-half $gutter-one-third+1;
            border-bottom: 1px solid $white;
            display: block;
            color: $white;
            background: $light-blue;
            text-decoration: none;
            &:hover,
            &:focus {
              background: lighten($light-blue, 10%);
            }
            &:active {
              background: lighten($light-blue, 15%);
            }
            &.active {
              border-bottom: 0;
              margin-top: -1px;
              border-left: 1px solid $light-blue;
              background: transparent;
              color: $light-blue;
              padding: $gutter-one-third+1px $gutter-one-third $gutter-half+1px;
              &:hover,
              &:focus {
                background: lighten($light-blue, 45%);
              }
              &:active {
                background: lighten($light-blue, 40%);
              }
            }
          }
          &:first-child a {
            border-top-color: transparent;
            &.active {
              border-top: 1px solid $light-blue;
              border-width: 1px 0 1px 1px;
            }
          }
        }
      }
    }
  }

  .page.hidden {
    display: none;
  }

  .in-page-navigation {
    h3 {
      @include core-16;
    }
    li {
      @include core-16;
      padding: 0;
      list-style: disc;
    }
  }

  .document .body {
    margin-top: -2px;

    a[rel=external] {
      display: inline;
    }
  }

  .block-4 {
    padding-bottom: 0;

    .inner-block {
      border-top: 4px solid $light-blue;
    }

    .related-guidance {
      padding-top: $gutter-half;
      padding-bottom: $gutter;
      color: $light-blue;
      a {
      color: $light-blue;
      }

      h1 {
        @include core-27;
        //color: lighten($body-text, 50%);
      }
      ul {
        @include core-19;
        li {
          margin-left: 1.2em;
        }
      }
    }
  }

  @include media(desktop) {
    @include ie(8){
      padding-top: $gutter-half; // to fix margin-top floating sibling bug
    }
    .meta {
      position: relative;
      z-index: 101;
      margin-top: -55px;

      .meta-changes {
        width: auto;
        float: none;
        padding: 0;
        margin: 0;
      }
    }
    .page-header {
      margin-top: $gutter-half;
      padding: $gutter $gutter $gutter-two-thirds;

      .organisations-icon-list {
        overflow: hidden;
        width: 100%;
        .organisation {
          float: left;
          margin-right: $gutter;
          position: relative;
        }
      }
      .page-meta {
        margin-right: 190px;
      }
      .more-like-this {
        float: right;
        padding: $gutter-two-thirds $gutter;
        border-left: 1px solid $light-blue;
        margin-top: -49px;
        margin-right: -$gutter;
        margin-bottom: -$gutter-two-thirds;
        a {
          padding-bottom: 3px;
          display: block;
        }
      }
    }
    .document_page .block-3 {
      width: 75%;
    }
    .block-4 {
      .inner-block {
        margin: 0 $gutter;
        overflow: hidden;
        padding: 0 0 $gutter*2 25%;
        .related-guidance {
          padding: $gutter-two-thirds 0 $gutter-one-third $gutter;
          margin-left: -$gutter;
          border-left: 1px solid $light-blue;
        }
      }
    }
  }
}

.specialist-guides-search {
  width: 100%;
  padding-bottom: $gutter*4;
  overflow: hidden;

  @include media(desktop){
    .block-1 .inner-block {
      padding: 0;
    }
    .block-3 {
      width: 30%;
      float: left;
      display: inline;
      min-height: 100px;
    }
    .block-4 {
      width: 70%;
      float: left;
      display: inline;
    }
  }
  .search-form {
    padding: $gutter*2 0;
    label {
      width: 30%;
      display: block;
      float: left;
      text-align: right;
      padding: 0.25em 0 0.25em $gutter-two-thirds;
      line-height: 1.25;
    }
    .search-box {
      width: 300px;
    }
    .button {
      top: 0;
    }
  }

  .filters {
    li a {
      @include core-16;
      display: block;
      padding: 3px 3px 3px 6px;
      width: 100%;
      overflow: hidden;
      line-height: $gutter-two-thirds+6px;

      &.active {
        background: darken($light-warm-grey, 5%);
      }
      &:hover,
      &:focus {
        background: $light-warm-grey;
      }
      span {
        display: block;
        padding: 3px;
        float: right;
        line-height: $gutter-two-thirds;
        background: $specialist-background;
      }
    }
  }
  .result-block {
    h2 {
      @include core-24;
      padding-top: 0;
      margin-bottom: $gutter-half;
    }
    .more-results {
      text-align: right;
    }
  }
  .search-results {
    .result {
      margin-bottom: $gutter;
      list-style: none;

      h3 {
        margin-bottom: $gutter-one-sixth;
      }
      .highlight, .description {
        margin-bottom: $gutter-one-third;
      }
      .meta {
        @include core-16;
      }
      .meta {
        display: block;
        padding: 0;
        .section {
          margin-left: $gutter-half;
        }
      }

      &.guide {
        background-image: url(/government/assets/icons/mainstream/icon-guide-s.png);
      }
      &.answer,
      &.calendar,
      &.smart_answer,
      &.calculator,
      &.custom-application {
        background-image: url(/government/assets/icons/mainstream/icon-answer-s.png);
      }
      &.local_transaction,
      &.transaction,
      &.place,
      &.nearest,
      &.service {
        background-image: url(/government/assets/icons/mainstream/icon-service-s.png);
      }
      &.programme {
        background-image: url(/government/assets/icons/mainstream/icon-programme-s.png);
      }
      &.licence {
        background-image: url(/government/assets/icons/mainstream/icon-licence-s.png);
      }
      &.guide,
      &.answer,
      &.calendar,
      &.licence,
      &.smart_answer,
      &.calculator,
      &.custom-application,
      &.local_transaction,
      &.transaction,
      &.place,
      &.nearest,
      &.service,
      &.programme {
        background-repeat: no-repeat;
        background-position: 0 100%;
        .meta {
          text-indent: 30px;
        }
      }
      &.specialist_guidance {
        .meta {
          border-left: 3px solid $light-blue;
          padding-left: 10px;
        }
      }
    }
  }

}

